<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PizzaApp - Driver</string>

    <!-- Main Activity -->

    <string name="main_bt_currentlocation_imgdesc">Go to my current Location</string>
    <string name="main_bt_mapmode_imgdesc">Switch Map Mode</string>
    <string name="main_bt_loadroute_imgdesc">Load Route from Server</string>
    <string name="main_bt_senddelivered_imgdesc">Send delivered State to Server</string>
    <string name="main_senddelivered_title">Delivery Confirmation</string>
    <string name="main_senddelivered_message">Delivered Order:\n%s</string>
    <string name="main_senddelivered_bt_positive">Confirm</string>
    <string name="main_senddelivered_bt_negative">Cancel</string>
    <string name="main_senddelivered_back_pizzeria_title">Back in Pizzeria Confirmation</string>
    <string name="main_senddelivered_back_pizzeria_message">Please confirm that you are back in Pizzeria</string>

    <!-- Map Behavior -->

    <string name="mapbehavior_content_heading_text">Map Behaviors</string>
    <string name="mapbehavior_content_trackme_key">track_me</string>
    <string name="mapbehavior_content_trackme_text">Enable Tracking</string>
    <string name="mapbehavior_content_followme_key">follow_me</string>
    <string name="mapbehavior_content_followme_text">Follow my Position</string>
    <string name="mapbehavior_content_showroute_key">show_route</string>
    <string name="mapbehavior_content_showroute_text">Show Route</string>
    <string name="mapbehavior_content_showtraffic_key">show_traffic_info</string>
    <string name="mapbehavior_content_showtraffic_text">Show Traffic Info</string>

    <color name="mapbehavior_bg">#CC000000</color>

    <!-- Menu -->

    <string name="menu_preferences_title">Preferences</string>
    <string name="menu_help_title">Help</string>
    <string name="menu_about_title">About</string>

    <!-- About Activity -->
    
    <string name="about_header">** Thank you for downloading this app! **</string>
    <string name="about_content">*Developers: PizzaApp Team\n*Institution: University of Applied Science of Munich, Germany\n*Course: Lernen im Projekt\n*Time: Summer Semester 2012</string>
    
    <!-- Preferences Activity -->

    <string name="pref_summary_prefix_text">Current value:</string>
    <string name="pref_summary_notset_text">Unspecified</string>
    <string name="pref_category_server_title">Server Configuration</string>
    <string name="pref_category_server_hostname_key">server_hostname</string>
    <string name="pref_category_server_hostname_title">Hostname</string>
    <string name="pref_category_server_hostname_dialogtitle">Type in the Server Hostname</string>
    <string name="pref_category_server_port_key">server_port</string>
    <string name="pref_category_server_port_title">Port</string>
    <string name="pref_category_server_port_dialogtitle">Type in the Server Port</string>
    <string name="pref_category_driver_title">Driver Configuration</string>
    <string name="pref_category_driver_id_key">driver_id</string>
    <string name="pref_category_driver_id_title">Name</string>
    <string name="pref_category_driver_id_dialogtitle">Select a Driver</string>
    <string name="pref_category_driver_list_key">driver_list</string>
    <string name="pref_category_tracking_title">Tracking Interval Configuration</string>
    <string name="pref_category_tracking_time_interval_key">tracking_time_interval</string>
    <string name="pref_category_tracking_time_interval_title">Time Interval</string>
    <string name="pref_category_tracking_time_interval_dialogtitle">Select a Time Interval</string>
    <string name="pref_category_tracking_distance_interval_key">tracking_distance_interval</string>
    <string name="pref_category_tracking_distance_interval_title">Distance Interval</string>
    <string name="pref_category_tracking_distance_interval_dialogtitle">Select a Distance Interval</string>

    <!-- Preferences Lists -->

    <string name="tracking_distance_interval_0">Always</string>
    <string name="tracking_distance_interval_10">10 Meters</string>
    <string name="tracking_distance_interval_25">25 Meters</string>
    <string name="tracking_distance_interval_50">50 Meters</string>
    <string name="tracking_distance_interval_100">100 Meters</string>
    <string name="tracking_time_interval_0">Always</string>
    <string name="tracking_time_interval_10">10 Seconds</string>
    <string name="tracking_time_interval_20">20 Seconds</string>
    <string name="tracking_time_interval_30">30 Seconds</string>
    <string name="tracking_time_interval_60">1 Minute</string>

    <!-- Location Provider -->

    <string name="provider_disabled_message">Please let us determine your position!</string>
    <string name="provider_disabled_bt_positive">Activate</string>
    <string name="provider_disabled_bt_negative">Exit</string>

    <!-- General Services -->

    <string name="service_progress_dialog_wait_title">Please wait!</string>
    <string name="service_check_connection_message">Checking server connection…</string>
    <string name="service_errordialog_bt_ok">OK</string>

    <!-- DriverInfo Services -->

    <string name="service_driverinfo_hostname_not_set_message">Please specify the server configuration! (hostname and port)</string>
    <string name="service_driverinfo_illegal_statuscode_message">Received connection error! (Status Code: %s)</string>
    <string name="service_driverinfo_connection_failed_message">Server connection failed!</string>
    <string name="service_driverinfo_no_driver_available">No Drivers available at server, using cached Drivers!</string>

    <!-- DriverLocation Services -->

    <string name="service_driverlocation_unable_to_send_data">Unable to send Position to Server:</string>
    <string name="service_driverlocation_hostname_not_set_message">Server Configuration not specified in Application Preferences. Please set it up!</string>
    <string name="service_driverlocation_illegal_statuscode_message">Received connection error! (Status Code: %s)</string>
    <string name="service_driverlocation_connection_failed_message">Server connection failed!</string>
    <string name="service_driverlocation_no_driver_selected">No Driver selected in Application Preferences. Please select one!</string>
    <string name="service_driverlocation_tracking_disabled">Meanwhile the Location Tracking was disabled.</string>

    <!-- DriverRoute Services -->

    <string name="service_fetch_route_message">Fetching Route from Server…</string>
    <string name="service_driverroute_hostname_not_set_message">Server Configuration not specified in Application Preferences. Please set it up!</string>
    <string name="service_driverroute_illegal_statuscode_message">Received connection error! (Status Code: %s)</string>
    <string name="service_driverroute_connection_failed_message">Server connection failed!</string>
    <string name="service_driverroute_no_driver_selected">No Driver selected in Application Preferences. Please select one!</string>
    <string name="service_driverroute_no_route_available">No Route available!</string>
    
     <!-- Send Delivered Services -->

    <string name="service_senddelivered_hostname_not_set_message">Server Configuration not specified in Application Preferences. Please set it up!</string>
    <string name="service_senddelivered_illegal_statuscode_message">Received connection error! (Status Code: %s)</string>
    <string name="service_senddelivered_connection_failed_message">Server connection failed!</string>
    <string name="service_senddelivered_no_driver_selected">No Driver selected in Application Preferences. Please select one!</string>
    <string name="service_senddelivered_no_route_available">No Route available!</string>

    <!-- SplashScreen Activity -->

    <string name="splash_img_logo_imgdesc">PizzaApp</string>

</resources>