<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_slider_mapbehavior_content_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/mapbehavior_id"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/mapbehavior_bg" >

        <LinearLayout
            android:id="@+id/mapbehavior_content_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/mapbehavior_content_heading_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mapbehavior_content_heading_text"
                android:textSize="22dip" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dip" >

                <CheckBox
                    android:id="@+id/mapbehavior_content_trackme_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mapbehaviorClickHandler"
                    android:text="@string/mapbehavior_content_trackme_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dip" >

                <CheckBox
                    android:id="@+id/mapbehavior_content_followme_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mapbehaviorClickHandler"
                    android:text="@string/mapbehavior_content_followme_text" />
            </LinearLayout>

            <!-- 
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dip" >

                <CheckBox
                    android:id="@+id/mapbehavior_content_showroute_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mapbehaviorClickHandler"
                    android:text="@string/mapbehavior_content_showroute_text" />
            </LinearLayout> 
            -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dip" >

                <CheckBox
                    android:id="@+id/mapbehavior_content_showtraffic_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mapbehaviorClickHandler"
                    android:text="@string/mapbehavior_content_showtraffic_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>